Make sing shop for dried fruit

--- a/Badammi/about-us.html
+++ b/Badammi/about-us.html
@@ -259,22 +259,23 @@
                                 </div>
                                 <span class="divider-2"></span>
                                 <div class="text-widget">
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
                                     <ul>
-                                        <li> <i class="fa fa-map-marker"></i> <span> <strong>100 highland ave,</strong> california, united state </span> </li>
-                                        <li> <i class="fa fa-envelope-square"></i> <span><a href="#">contact@naturix.com</a> </span> </li>
-                                        <li> <i class="fa fa-phone-square"></i> <span><a href="#">www.naturix.com</a> </span> </li>
+                                        <li> <i class="fa fa-map-marker"></i> <strong>Nerimaov Aga Neymatulla</strong> </li>
+                                        <li> <i class="fa fa-envelope-square"></i> <span><a href="#">info@badammi.com</a> </span> </li>
+                                        <li> <i class="fa fa-phone-square"></i> <span><a href="#">+994519640000</a> </span> </li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-4 footer-widget">
-                                <h2 class="title-1">  <span class="light-font">naturix  </span> <strong>information </strong> </h2>
+                                <h2 class="title-1">  <span class="light-font">badammi  </span> <strong>information </strong> </h2>
                                 <span class="divider-2"></span>
                                 <ul class="list">
-                                    <li> <a href="#"> about our shop </a> </li>
-                                    <li> <a href="#"> our blog </a> </li>
+                                    <li> <a href="about-us.html"> about our shop </a> </li>
+                                    <li> <a href="index.html"> our blog </a> </li>
                                 </ul>
                             </div>
+                        </div>
+                    </div>
                 </section>
             </footer>
             <!-- /FOOTER -->
