--- a/Badammi/contact.html
+++ b/Badammi/contact.html
@@ -80,17 +80,7 @@
             </header>
             <!-- / Main Header Ends -->   
 
-            <!--Breadcrumb Section Start-->
-            <section class="breadcrumb-bg">                
-                <div class="theme-container container ">                       
-                    <div class="site-breadcumb white-clr">                        
-                        <h2 class="section-title"> <strong class="clr-txt">naturix </strong> <span class="light-font">Shop </span> </h2>
-                        <ol class="breadcrumb breadcrumb-menubar">
-                            <li> <a href="#"> Home </a> Contact  </li>                             
-                        </ol>
-                    </div>  
-                </div>
-            </section>
+          
             <!--Breadcrumb Section End-->
 
 
@@ -104,18 +94,15 @@
                         </div>
                         <div class="col-md-4">
                             <div class="contact-details">
-                                <h3 class="fsz-25"><span class="light-font">Naturix  </span> <strong>Address </strong>  </h3> 
+                                <h3 class="fsz-25"><span class="light-font">Badammi  </span> <strong>Address </strong>  </h3> 
                                 <h6 class="sub-title-1 pb-15">ORGANIC STORE</h6>
 
-                                <h5 class="clr-txt fsz-12 pt-15">NATURIX STORE</h5>
-                                <p>142 West newton, NY 19088, United States</p>
+                                <h5 class="clr-txt fsz-12 pt-15">BADAMMI STORE</h5>
+                                <p>Nerimaov Aga Neymatullas</p>
 
                                 <ul>
-                                    <li> <strong>Call:  </strong> <i>+7 (100) 2234 999</i> </li>
-                                    <li> <strong>Email: </strong> <i> <a href='#'>info@montero.com</a> </i> </li>
-                                    <li> <strong>Skype: </strong> <i> <a href='#'> Montero.Property </a> </i> </li>
-                                    <li> <strong>Facebook: </strong> <i>  <a href='#'> Montero.facebook </a> </i> </li>
-                                    <li> <strong>Twitter: </strong> <i>  <a href='#'> @Montero.Property </a> </i> </li>
+                                    <li> <strong>Call:  </strong> <i>+994519640000</i> </li>
+                                    <li> <strong>Email: </strong> <i> <a href='#'>info@badammi.com</a> </i> </li>
                                 </ul>
 
                             </div>
@@ -125,7 +112,7 @@
                     <div class="divider-full-1"></div>
 
                     <div class="pt-50 col-md-8 col-md-offset-2">
-                        <h3 class="fsz-25 text-center"><span class="light-font">Contact </span> <strong>naturix </strong>  </h3> 
+                        <h3 class="fsz-25 text-center"><span class="light-font">Contact </span> <strong>Badammi </strong>  </h3> 
                         <h6 class="sub-title-1 text-center">ORGANIC STORE</h6>
 
                         <div class="contact-form pt-50">
@@ -167,20 +154,19 @@
                                 </div>
                                 <span class="divider-2"></span>
                                 <div class="text-widget">
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
                                     <ul>
-                                        <li> <i class="fa fa-map-marker"></i> <span> <strong>100 highland ave,</strong> california, united state </span> </li>
-                                        <li> <i class="fa fa-envelope-square"></i> <span><a href="#">contact@naturix.com</a> </span> </li>
-                                        <li> <i class="fa fa-phone-square"></i> <span><a href="#">www.naturix.com</a> </span> </li>
+                                        <li> <i class="fa fa-map-marker"></i> <strong>Nerimaov Aga Neymatulla</strong> </li>
+                                        <li> <i class="fa fa-envelope-square"></i> <span><a href="#">info@badammi.com</a> </span> </li>
+                                        <li> <i class="fa fa-phone-square"></i> <span><a href="#">+994519640000</a> </span> </li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-4 footer-widget">
-                                <h2 class="title-1">  <span class="light-font">naturix  </span> <strong>information </strong> </h2>
+                                <h2 class="title-1">  <span class="light-font">badammi  </span> <strong>information </strong> </h2>
                                 <span class="divider-2"></span>
                                 <ul class="list">
-                                    <li> <a href="#"> about our shop </a> </li>
-                                    <li> <a href="#"> our blog </a> </li>
+                                    <li> <a href="about-us.html"> about our shop </a> </li>
+                                    <li> <a href="index.html"> our blog </a> </li>
                                 </ul>
                             </div>
                         </div>
