--- a/Badammi/shop-1.html
+++ b/Badammi/shop-1.html
@@ -39,6 +39,16 @@
 
     <body id="home" class="wide">
 
+        <div id="loading">
+            <div class="loader">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
+
         <!-- WRAPPER -->
         <main class="wrapper"> 
             <!-- CONTENT AREA -->
@@ -166,20 +176,19 @@
                                 </div>
                                 <span class="divider-2"></span>
                                 <div class="text-widget">
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
                                     <ul>
-                                        <li> <i class="fa fa-map-marker"></i> <span> <strong>100 highland ave,</strong> california, united state </span> </li>
-                                        <li> <i class="fa fa-envelope-square"></i> <span><a href="#">contact@naturix.com</a> </span> </li>
-                                        <li> <i class="fa fa-phone-square"></i> <span><a href="#">www.naturix.com</a> </span> </li>
+                                        <li> <i class="fa fa-map-marker"></i> <strong>Nerimaov Aga Neymatulla</strong> </li>
+                                        <li> <i class="fa fa-envelope-square"></i> <span><a href="#">info@badammi.com</a> </span> </li>
+                                        <li> <i class="fa fa-phone-square"></i> <span><a href="#">+994519640000</a> </span> </li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-4 footer-widget">
-                                <h2 class="title-1">  <span class="light-font">naturix  </span> <strong>information </strong> </h2>
+                                <h2 class="title-1">  <span class="light-font">badammi  </span> <strong>information </strong> </h2>
                                 <span class="divider-2"></span>
                                 <ul class="list">
-                                    <li> <a href="#"> about our shop </a> </li>
-                                    <li> <a href="#"> our blog </a> </li>
+                                    <li> <a href="about-us.html"> about our shop </a> </li>
+                                    <li> <a href="index.html"> our blog </a> </li>
                                 </ul>
                             </div>
                         </div>
@@ -391,6 +400,19 @@ document.addEventListener("DOMContentLoaded", async () => {
 <style>
     .product-media {
     background-color: #fff;
+}
+
+/* === Общие визуальные правки === */
+#listproduct .deal-text p {
+    height: 60px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;       /* ← исправлено! раньше было -webkit-line-break */
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    line-height: 1.4em;
+    font-size: 14px;
+    color: #555;
 }
 </style>
     </body>
