--- a/Badammi/shop-2.html
+++ b/Badammi/shop-2.html
@@ -39,6 +39,16 @@
 
     <body id="home" class="wide">
 
+        <div id="loading">
+            <div class="loader">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
+
         <!-- WRAPPER -->
         <main class="wrapper"> 
             <!-- CONTENT AREA -->
@@ -166,20 +176,19 @@
                                 </div>
                                 <span class="divider-2"></span>
                                 <div class="text-widget">
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
                                     <ul>
-                                        <li> <i class="fa fa-map-marker"></i> <span> <strong>100 highland ave,</strong> california, united state </span> </li>
-                                        <li> <i class="fa fa-envelope-square"></i> <span><a href="#">contact@naturix.com</a> </span> </li>
-                                        <li> <i class="fa fa-phone-square"></i> <span><a href="#">www.naturix.com</a> </span> </li>
+                                        <li> <i class="fa fa-map-marker"></i> <strong>Nerimaov Aga Neymatulla</strong> </li>
+                                        <li> <i class="fa fa-envelope-square"></i> <span><a href="#">info@badammi.com</a> </span> </li>
+                                        <li> <i class="fa fa-phone-square"></i> <span><a href="#">+994519640000</a> </span> </li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-4 footer-widget">
-                                <h2 class="title-1">  <span class="light-font">naturix  </span> <strong>information </strong> </h2>
+                                <h2 class="title-1">  <span class="light-font">badammi  </span> <strong>information </strong> </h2>
                                 <span class="divider-2"></span>
                                 <ul class="list">
-                                    <li> <a href="#"> about our shop </a> </li>
-                                    <li> <a href="#"> our blog </a> </li>
+                                    <li> <a href="about-us.html"> about our shop </a> </li>
+                                    <li> <a href="index.html"> our blog </a> </li>
                                 </ul>
                             </div>
                         </div>
@@ -256,7 +265,7 @@ async function loadProducts() {
                         <div class="product-media"> 
                             <img class="prod-img" alt="${fruit.name}" src="${photoUrl}" />     
                             <div class="prod-icons"> 
-                                <a href="shop-single.html?id=${fruit.id}" data-toggle="modal" class="fa fa-expand"></a>
+                                <a href="shop-single-dried.html?id=${fruit.id}" data-toggle="modal" class="fa fa-expand"></a>
                             </div>
                         </div>                                           
                         <div class="product-caption"> 
@@ -274,7 +283,7 @@ async function loadProducts() {
                 <div class="col-md-6 col-sm-12"> 
                     <div class="deal-item list-view">
                         <div class="deal-icons">                                         
-                            <a href="shop-single.html?id=${fruit.id}" data-toggle="modal" class="fa fa-expand"></a>                                      
+                            <a href="shop-single-dried.html?id=${fruit.id}" data-toggle="modal" class="fa fa-expand"></a>                                      
                         </div>
                         <div class="deal-content">
                             <div class="deal-text">
@@ -357,7 +366,7 @@ document.addEventListener("DOMContentLoaded", async () => {
             const driedFruits = fruits.filter(f => f.name.toLowerCase().includes("dried"));
             driedFruits.forEach(fruit => {
                 const li = document.createElement("li");
-                li.innerHTML = `<a class="fix-a" href="shop-single.html?id=${fruit.id}">${fruit.name}</a>`;
+                li.innerHTML = `<a class="fix-a" href="shop-single-dried.html?id=${fruit.id}">${fruit.name}</a>`;
                 driedMenu.appendChild(li);
             });
 
