--- a/Badammi/shop-single.html
+++ b/Badammi/shop-single.html
@@ -375,7 +375,7 @@ document.addEventListener("DOMContentLoaded", async () => {
             driedMenu.innerHTML = "";
             fruits.filter(f => f.name.toLowerCase().includes("dried")).forEach(fruit => {
                 const li = document.createElement("li");
-                li.innerHTML = `<a class="fix-a" href="shop-single.html?id=${fruit.id}">${fruit.name}</a>`;
+                li.innerHTML = `<a class="fix-a" href="shop-single-dried.html?id=${fruit.id}">${fruit.name}</a>`;;
                 driedMenu.appendChild(li);
             });
             driedMenu.innerHTML += `<li><a class="fix-a" href="shop-2.html"><strong>All catalog</strong></a></li>`;
