--- a/Badammi/shop-2.html
+++ b/Badammi/shop-2.html
@@ -67,7 +67,7 @@
                         <div class="responsive-toggle fa fa-bars"> </div>
                         <nav class="fix-navbar" id="primary-navigation">            
                             <ul class="primary-navbar">                                                
-                                <li class="dropdown active">
+                                <li class="dropdown">
                                     <a href="index.html">Home</a>                                            
                                     
                                 </li> 
@@ -75,7 +75,7 @@
                                 <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Fresh products</a> 
                                     <ul id="fresh"class="dropdown-menu"> </ul> 
                                 </li>
-                                <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Dried products</a> 
+                                <li class="dropdown active"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Dried products</a> 
                                     <ul class="dropdown-menu"> </ul> 
                                 </li>
                                 <li><a href="contact.html">Contact Us</a></li>   
