--- a/Badammi/shop-single-dried.html
+++ b/Badammi/shop-single-dried.html
@@ -67,14 +67,14 @@
                         <div class="responsive-toggle fa fa-bars"> </div>
                         <nav class="fix-navbar" id="primary-navigation">            
                             <ul class="primary-navbar">                                                
-                                <li class="dropdown active">
+                                <li class="dropdown">
                                     <a href="index.html">Home</a>                                            
                                 </li> 
                                 <li><a href="about-us.html">About Us</a></li>
                                 <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Fresh products</a> 
                                     <ul id="fresh"class="dropdown-menu"> </ul> 
                                 </li>
-                                <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Dried products</a> 
+                                <li class="dropdown active"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Dried products</a> 
                                     <ul class="dropdown-menu"> </ul> 
                                 </li>  
                                 <li><a href="contact.html">Contact Us</a></li>   
@@ -221,7 +221,7 @@ $(document).ready(function () {
 
             mainSlider.append(`
                 <div class="item active">
-                    <img id="main-photo" src="${mainImgUrl}" alt="${fruit.name}" style="width:350px;height:auto;object-fit:cover;border-radius:8px;cursor:grab;">
+                    <img id="main-photo" src="${mainImgUrl}" alt="${fruit.name}" style="width:350px;object-fit:cover;border-radius:8px;cursor:grab;">
                 </div>
             `);
 
@@ -301,6 +301,85 @@ document.addEventListener("DOMContentLoaded", async () => {
 });
 </script>
 <style>
+.product-layout {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 60px;
+    flex-wrap: nowrap;
+    margin-top: 40px;
+}
+
+#main-photo {
+    width: 600px;
+    height: 600px;
+    object-fit: cover;
+    border-radius: 20px;
+    box-shadow: none;             /* убрали тень */
+    border: none;                 /* убрали рамку, если была */
+    outline: none;                /* убрали контур при клике */
+    background: none;             /* убрали фон */
+    transition: transform 0.4s ease;
+}
+#main-photo:hover {
+    transform: scale(1.03);
+}
+
+/* Текст справа */
+.product-info {
+    flex: 1;
+    padding: 20px 40px;
+}
+
+/* Название — в одну строку */
+#fruit-name {
+    font-size: 64px;
+    font-weight: 800;
+    white-space: nowrap; /* не переносить */
+    overflow: hidden;
+    text-overflow: ellipsis; /* если длинное, добавятся ... */
+}
+
+/* Подзаголовки и текст */
+.fsz-16 h3 {
+    font-size: 28px;
+    margin-bottom: 10px;
+}
+
+#fruit-description,
+#fruit-benefits li {
+    font-size: 20px;
+    line-height: 1.6;
+}
+
+/* Отступы и визуальный баланс */
+.section-title {
+    margin-bottom: 20px;
+}
+
+/* --- Адаптация под телефоны --- */
+@media (max-width: 991px) {
+    .product-layout {
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
+    .product-photo, .product-info {
+        width: 100%;
+        padding: 0;
+        text-align: center;
+    }
+    #main-photo {
+        width: 90%;
+        height: 450px;
+        max-width: 400px;
+    }
+    #fruit-name {
+        font-size: 48px;
+        white-space: normal;
+    }
+}
+    
 #product img {
     width: 100%;
     height: auto;
@@ -458,23 +537,6 @@ document.addEventListener("DOMContentLoaded", async () => {
 .fsz-16 {
     font-size: 24px; /* заголовок Composition */
     margin-bottom: 5px; /* чуть меньше отступ снизу */
-}
-#main-photo {
-    width: 500px;       /* фиксированная ширина */
-    height: 500px;      /* фиксированная высота */
-    object-fit: cover;  /* чтобы фото не искажалось, а обрезалось по рамке */
-    border-radius: 12px;
-    cursor: grab;
-    transition: transform 0.4s ease, opacity 0.4s ease;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-}
-
-@media (max-width: 991px) {
-    #main-photo {
-        width: 100%;
-        height: auto; /* или height: 350px; если хочешь фиксированную высоту */
-        max-width: 350px;
-    }
 }
 
 .product-layout {
