--- a/Badammi/about-us.html
+++ b/Badammi/about-us.html
@@ -56,10 +56,10 @@
                         <div class="responsive-toggle fa fa-bars"> </div>
                         <nav class="fix-navbar" id="primary-navigation">            
                             <ul class="primary-navbar">                                                
-                                <li class="dropdown active">
+                                <li class="dropdown">
                                     <a href="index.html">Home</a>                                            
                                 </li> 
-                                <li><a href="#">About Us</a></li>
+                                <li class="active"><a href="#">About Us</a></li>
                                <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Fresh products</a> 
                                     <ul id="fresh"class="dropdown-menu"> </ul> 
                                 </li>
