--- a/Badammi/contact.html
+++ b/Badammi/contact.html
@@ -57,7 +57,7 @@
                         <div class="responsive-toggle fa fa-bars"> </div>
                         <nav class="fix-navbar" id="primary-navigation">            
                             <ul class="primary-navbar">                                                
-                                <li class="dropdown active">
+                                <li class="dropdown">
                                     <a href="index.html">Home</a>                                            
                                 </li> 
                                 <li><a href="about-us.html">About Us</a></li>
@@ -67,7 +67,7 @@
                                 <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Dried products</a> 
                                     <ul class="dropdown-menu"> </ul> 
                                 </li> 
-                                <li><a href="">Contact Us</a></li>   
+                                <li class="active"><a href="">Contact Us</a></li>   
                                         </li> 
                                     </ul>
                                 </li>
