--- a/Badammi/index.html
+++ b/Badammi/index.html
@@ -94,14 +94,32 @@
             <section class="main-slide">
                 <div id="naturix-slider" class="owl-carousel nav-1">
                     <div class="item">                        
-                        <img alt=".." src="assets/img/slider/slide-1.jpg">
-                        <div class="tbl-wrp slide-1">
+                        <img alt=".." src="assets/img/slider/badammi slide 1.jpg">                      
+                        <div class="tbl-wrp slide-1">                     
                             <div class="text-middle">
                                 <div class="tbl-cell">
                                     <div class="slide-caption container text-center">
                                         <div class="slide-title">
-                                            <img src="assets/img/icons/slide-txt-1.png" alt="">
-                                            <span>100% Guarantee</span>
+                                        </div>
+                                        <div class="slide-title2 pb-50">
+                                            <h2 class="section-title"> <span>Live </span> <strong>organic </strong> <span class="light-font">for live </span> <strong>healthy </strong> </h2>
+                                            <h4 class="sub-title"> ORGANIC FRUITS, VEGETABLES, AND LOT MORE TO YOUR DOOR </h4>
+                                        </div>
+                                        <div class="slide">
+                                            <a href="#" class="slide-btn"> Shop Now</a>  
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">                        
+                        <img alt=".." src="assets/img/slider/badammi slide 2.jpg">                      
+                        <div class="tbl-wrp slide-1">                     
+                            <div class="text-middle">
+                                <div class="tbl-cell">
+                                    <div class="slide-caption container text-center">
+                                        <div class="slide-title">
                                         </div>
                                         <div class="slide-title2 pb-50">
                                             <h2 class="section-title"> <span class="light-font">Live </span> <strong>organic </strong> <span class="light-font">for live </span> <strong>healthy </strong> </h2>
@@ -115,15 +133,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="item">                       
-                        <img alt=".." src="assets/img/slider/slide-1.jpg">
-                        <div class="tbl-wrp slide-1">
+                    <div class="item">                        
+                        <img alt=".." src="assets/img/slider/badammi slide 3.jpg">                      
+                        <div class="tbl-wrp slide-1">                     
                             <div class="text-middle">
                                 <div class="tbl-cell">
                                     <div class="slide-caption container text-center">
                                         <div class="slide-title">
-                                            <img src="assets/img/icons/slide-txt-1.png" alt="">
-                                            <span>100% Guarantee</span>
                                         </div>
                                         <div class="slide-title2 pb-50">
                                             <h2 class="section-title"> <span class="light-font">Live </span> <strong>organic </strong> <span class="light-font">for live </span> <strong>healthy </strong> </h2>
@@ -137,7 +153,67 @@
                             </div>
                         </div>
                     </div>
-                </div>               
+                    <div class="item">                        
+                        <img alt=".." src="assets/img/slider/badammi slide 4.jpg">                      
+                        <div class="tbl-wrp slide-1">                     
+                            <div class="text-middle">
+                                <div class="tbl-cell">
+                                    <div class="slide-caption container text-center">
+                                        <div class="slide-title">
+                                        </div>
+                                        <div class="slide-title2 pb-50">
+                                            <h2 class="section-title"> <span class="light-font">Live </span> <strong>organic </strong> <span class="light-font">for live </span> <strong>healthy </strong> </h2>
+                                            <h4 class="sub-title"> ORGANIC FRUITS, VEGETABLES, AND LOT MORE TO YOUR DOOR </h4>
+                                        </div>
+                                        <div class="slide">
+                                            <a href="#" class="slide-btn"> Shop Now</a>  
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">                        
+                        <img alt=".." src="assets/img/slider/badammi slide 5.jpg">                      
+                        <div class="tbl-wrp slide-1">                     
+                            <div class="text-middle">
+                                <div class="tbl-cell">
+                                    <div class="slide-caption container text-center">
+                                        <div class="slide-title">
+                                        </div>
+                                        <div class="slide-title2 pb-50">
+                                            <h2 class="section-title"> <span class="light-font">Live </span> <strong>organic </strong> <span class="light-font">for live </span> <strong>healthy </strong> </h2>
+                                            <h4 class="sub-title"> ORGANIC FRUITS, VEGETABLES, AND LOT MORE TO YOUR DOOR </h4>
+                                        </div>
+                                        <div class="slide">
+                                            <a href="#" class="slide-btn"> Shop Now</a>  
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">                        
+                        <img alt=".." src="assets/img/slider/badammi slide 6.jpg">                      
+                        <div class="tbl-wrp slide-1">                     
+                            <div class="text-middle">
+                                <div class="tbl-cell">
+                                    <div class="slide-caption container text-center">
+                                        <div class="slide-title">
+                                        </div>
+                                        <div class="slide-title2 pb-50">
+                                            <h2 class="section-title"> <span class="light-font">Live </span> <strong>organic </strong> <span class="light-font">for live </span> <strong>healthy </strong> </h2>
+                                            <h4 class="sub-title"> ORGANIC FRUITS, VEGETABLES, AND LOT MORE TO YOUR DOOR </h4>
+                                        </div>
+                                        <div class="slide">
+                                            <a href="#" class="slide-btn"> Shop Now</a>  
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
             </section>
             <!-- / Main Slider Ends -->   
 
