--- a/Badammi/shop-1.html
+++ b/Badammi/shop-1.html
@@ -67,12 +67,12 @@
                         <div class="responsive-toggle fa fa-bars"> </div>
                         <nav class="fix-navbar" id="primary-navigation">            
                             <ul class="primary-navbar">                                                
-                                <li class="dropdown active">
+                                <li class="dropdown">
                                     <a href="index.html">Home</a>                                            
                                     
                                 </li> 
                                 <li><a href="about-us.html">About Us</a></li>
-                                <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Fresh products</a> 
+                                <li class="dropdown active"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Fresh products</a> 
                                     <ul id="fresh"class="dropdown-menu"> </ul> 
                                 </li>
                                 <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" >Dried products</a> 
